--- a/AtkTennisWeb/AtkTennisWeb.csproj
+++ b/AtkTennisWeb/AtkTennisWeb.csproj
@@ -7,6 +7,10 @@
 
   <ItemGroup>
     <PackageReference Include="linq.js" Version="2.2.0.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.10">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.5" />
   </ItemGroup>
 
