--- a/AtkTennisApp/appsettings.json
+++ b/AtkTennisApp/appsettings.json
@@ -8,7 +8,7 @@
   },
 
   "DbUrl": "Server=185.141.33.151,1433\\SQLEXPRESS; Database=AtkTennisDB; User ID=sa; password=Nostradamus3347;",
-  "AdminURL": "https://localhost:44318/",
+  "AdminURL": "http://185.141.33.151:1083/",
   "IdURL": "https://localhost:44348/",
   "AllowedHosts": "*",
   "MyIpAdress": "192.168.250.12"
